tls/https-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: MUTUAL
      #minProtocolVersion: TLSV1_2
      credentialName: cacerts3 # must be the same as secret
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpsbin
spec:
  hosts:
  - "*"
  gateways:
  - mygateway
  http:
  - route:
    - destination:
        port:
          number: 8000
        host: httpbin
